--- a/app/views/layouts/_countdown_clock.html.erb
+++ b/app/views/layouts/_countdown_clock.html.erb
@@ -4,7 +4,7 @@
       <div id="eventCurrentdiv align-items-end " style ="align-text:bottom">
         <h3 class = "pt-5" ><%= link_to @name, event_path(@displayconvo.id), title: @description %>
          is LIVE right NOW!</h3>
-        <%= link_to " Join Conversation ", user_viewer_path(@host.permalink, chatrm: @displayconvo.topic , event: @displayconvo.id), class: "btn btn-primary btn-sm", style: "width: 60%; margin-top: 10px; margin-bottom: 10px; border-radius: 5px; font-size: 150%" %>
+        <%= link_to " Join Conversation ", user_viewer_path(@host.permalink, chatrm: @displayconvo.topic , event: @displayconvo.id), class: "btn btn-primary btn-sm", style: "width: 60%; margin-top: 10px; margin-bottom: 10px; border-radius: 5px; font-size: 150%; background-color: #ffc107; border-color: #ffc107" %>
         <br>
         Hosted by: <%= link_to @host.name, @host.permalink %>
       </div>
